--- a/Docker/week-15-live-1/Dockerfile
+++ b/Docker/week-15-live-1/Dockerfile
@@ -2,11 +2,15 @@ FROM node:22
 
 WORKDIR /app
 
-COPY . .
-
+# Copy cached package folder if it not get changed and other prisma file also
+COPY package* .
+COPY ./prisma .
+# And this two steps get skipped if no change in packages and prisma folder
 RUN npm install
-RUN npm run build
 RUN npx prisma generate
+
+COPY . .
+RUN npm run build
 
 EXPOSE 3000
 # All of this run when image is create
