--- a/Docker/week-15-live-2.2/docker-compose.yaml
+++ b/Docker/week-15-live-2.2/docker-compose.yaml
@@ -11,7 +11,9 @@
 # # Is same as docker run --name mongodb -p 27017:27017 -v mongodb_data:/data/db mongo        
 # # Container name should be any name
 #    backend:
-#     image:"backend22"
+    # image:"backend22"
+    # if dont give the image name write
+    #   build: .
 #     container_name:backend_application
 #     ports:
 #       -3000:3000
@@ -33,6 +35,7 @@ services:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
+      - mongodb_data2:/data
 
   backend:
     image: backend22
@@ -45,3 +48,4 @@ services:
 
 volumes:
   mongodb_data:
+  mongodb_data2:
