--- a/Rate Limiting/backend/package.json
+++ b/Rate Limiting/backend/package.json
@@ -15,6 +15,8 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "@types/express-rate-limit": "^5.1.3",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0"
   }
 }
