--- a/Singleton_Pattern/package.json
+++ b/Singleton_Pattern/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "types": "index.d.ts",
   "scripts": {
-    "build":"tsc -p tsconfig.json",
-    "start":"node ./dist/index.js",
-    "dev":"npm run build && npm run start"
+    "build": "tsc -p tsconfig.json",
+    "start": "node ./dist/index.js",
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/redis": "^4.0.10",
+    "redis": "^5.10.0"
+  }
 }
